--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -600,7 +600,6 @@ header{
 #top-div{
     margin-top: 140px;
     height: 50px;
-    width: 400px;
     border: 1px solid var(--text);
 
     form{
@@ -608,10 +607,16 @@ header{
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 601px) {
     #top-div{
         width: 300px;
         background-color: lime;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #top-div{
+        width: 200px;
     }
 }
 
