--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,97 +9,20 @@
 </head>
 <body id = "list-home">
     <div id = "home">
-    
     <% let len = todo.length; %>
     <script>
-
         $(document).ready(function(){
             $("#popup").click(function(){
-                $("#top-div").addClass("hide-it");
+                $("#top-div").addClass("hide-it").css({top: "30px", opacity: "0"});
                 $("#popup").addClass("hide-it");
-                $("#top-div").css({height: '50px', width: '400px'});
-                $("#input-task").css({width: '250px'});
             });
 
             $("#add-todo").click(function(){
-                $("#top-div").removeClass("hide-it");
+                $("#top-div").removeClass("hide-it").animate({top: '-=30px', opacity: "1"}, "fast");
                 $("#popup").removeClass("hide-it");
-                $("#top-div").animate({up: '250px', height: '+=100px', width: '+=100px'}, "fast");
-                $("#input-task").animate({width: '+=200px'}, "fast");
             });
-
-
-            let todoCount = 0;
-            let atEnd = false;
-            while(!atEnd){
-                if($(`#span-${todoCount}`).length){
-                    todoCount++;
-                }else{
-                    atEnd = true;
-                }
-            }
-            
         });
-        
     </script>
-
-    <% function getDate(x){ %>
-        <% var year, month, day;%>
-        <% var date = JSON.stringify(x); %>
-        <% year = date.substring(1,5) %>
-        <% month = date.substring(6,8) %>
-        <% day = date.substring(9,11) %>
-        <% var color; %>
-
-        <% if(month == "01"){ %>
-            <% month = "Jan"; %>
-        <% } else if(month == "02"){ %>
-            <% month = "Feb"; %>
-        <% } else if(month == "03"){ %>
-            <% month = "Mar"; %>
-        <% }  else if(month == "04"){ %>
-            <% month = "Apr"; %>
-        <% } else if(month == "05"){ %>
-            <% month = "May"; %>
-        <% } else if(month == "06"){ %>
-            <% month = "Jun"; %>
-        <% } else if(month == "07"){ %>
-            <% month = "Jul"; %>
-        <% } else if(month == "08"){ %>
-            <% month = "Aug"; %>
-        <% } else if(month == "09"){ %>
-            <% month = "Sep"; %>
-        <% } else if(month == "10"){ %>
-            <% month = "Oct"; %>
-        <% } else if(month == "11"){ %>
-            <% month = "Nov"; %>
-        <% } else if(month == "12"){ %>
-            <% month = "Dec"; %>
-        <% } %>
-
-
-        <% if(day == "01"){ %>
-            <% day = "1"; %>
-        <% } else if(day == "02"){ %>
-            <% day = "2"; %>
-        <% } else if(day == "03"){ %>
-            <% day = "3"; %>
-        <% }  else if(day == "04"){ %>
-            <% day = "4"; %>
-        <% } else if(day == "05"){ %>
-            <% day = "5"; %>
-        <% } else if(day == "06"){ %>
-            <% day = "6"; %>
-        <% } else if(day == "07"){ %>
-            <% day = "7"; %>
-        <% } else if(day == "08"){ %>
-            <% day = "8"; %>
-        <% } else if(day == "09"){ %>
-            <% day = "9"; %>
-        <% } %>
-        
-        <% return [year, month, day, color]; %>
-    <% } %>
 
     <div id = "vh">
         <div id = "todo-screen">
