--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -515,8 +515,8 @@ header{
 .circle-button{
     border-radius: 50%;
     margin-right: 12px;
-    width: 20px;
-    height: 20px;
+    width: 20px !important;
+    height: 20px !important;
     border: 1px solid white;
 }
 
@@ -626,6 +626,7 @@ header{
     }
     .inputs{
         width: 82px !important;
+        font-size: 14px;
     }
 }
 
